# dctlibrary

./: CMakeLists.txt  README.md  dctlib.h.in
cuda/: CMakeLists.txt  cuda_dct.cu  cuda_dct.h  cuda_matrix_tools.cu  cuda_matrix_tools.h
dct/: CMakeLists.txt  dct_tools.c  dct_tools.h
include/: error.h
include/sys/: queue.h
jobs/: CMakeLists.txt  job_tools.c  job_tools.h
matrix/: CMakeLists.txt  matrix_tools.c  matrix_tools.cl  matrix_tools.h
pgm/: CMakeLists.txt  pgm_reader.c  pgm_reader.h
ressources/: jpeg.dox
src/: main.c
