cmake_minimum_required(VERSION 3.16)
add_library(c_dct_api STATIC dct_tools.c)
target_compile_definitions(c_dct_api PRIVATE $<$<BOOL:${BUILD_CUDA_DCT}>:USE_CUDA_DCT>)
if (BUILD_CUDA_DCT)
    target_include_directories(c_dct_api PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../cuda ${PROJECT_BINARY_DIR})
    target_link_libraries(c_dct_api PUBLIC c_cuda_dct)
endif()
if (UNIX AND NOT APPLE)
    target_link_libraries(c_dct_api PRIVATE m)
endif()
